--- a/.github/workflows/test-objc.yaml
+++ b/.github/workflows/test-objc.yaml
@@ -58,6 +58,10 @@ env:
   HACK_REPOSITORY: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name || github.repository }}
   HACK_SHA: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
 
+  # let's use Xcode 12.2 to test Xcode12-specifics
+  # TODO: change on default Xcode later
+  DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
+
 jobs:
   unit-tests-cocoapods:
     name: Unit tests (CocoaPods)
