--- a/.github/workflows/test-objc.yaml
+++ b/.github/workflows/test-objc.yaml
@@ -58,9 +58,11 @@ env:
   HACK_REPOSITORY: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name || github.repository }}
   HACK_SHA: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
 
-  # let's use Xcode 12.2 to test Xcode12-specifics
+  # let's use Xcode 12 to test Xcode12-specifics
   # TODO: change on default Xcode later
-  DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
+  # the list is here
+  # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md
+  DEVELOPER_DIR: /Applications/Xcode_12.app/Contents/Developer
 
 jobs:
   unit-tests-cocoapods:
