Use CocoaPods trunk repo, not development
Instead of using the development CocoaPods repository from GitHub, use
CocoaPods trunk CDN. This significantly improves build times because
it's not necessary to download a Git repo with a metric gazillion of
teeny-tiny spec files that we have absolutely no use for.

--- a/tests/objcthemis/Podfile
+++ b/tests/objcthemis/Podfile
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-source 'https://github.com/CocoaPods/Specs.git'
+source 'https://cdn.cocoapods.org/'
 
 platform :ios, '10.0'
 inhibit_all_warnings!
