--- a/docs/examples/Themis-server/Obj-C/Podfile
+++ b/docs/examples/Themis-server/Obj-C/Podfile
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-source 'https://github.com/CocoaPods/Specs.git'
+source 'https://cdn.cocoapods.org/'
 
 platform :ios, '12.0'
 project 'WorkingWithThemisServer/WorkingWithThemisServer.xcodeproj'
