--- a/docs/examples/swift/iOS-CocoaPods/Podfile
+++ b/docs/examples/swift/iOS-CocoaPods/Podfile
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-source 'https://github.com/CocoaPods/Specs.git'
+source 'https://cdn.cocoapods.org/'
 
 platform :ios, '10.0'
 project 'ThemisSwift/ThemisSwift.xcodeproj'
