--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,47 +1,15 @@
+# Starting with Themis 0.14 we don't have any need for this config anymore
+# since Themis has migrated away from CircleCI. However, until Themis 0.14
+# is released, CircleCI still runs nightly builds on the "stable" branch
+# and it requires the ".circleci/config.yml" file on the "master" branch.
+# Here's a minimal file contaning only required keys and doing no jobs.
+
 version: 2
 jobs:
-  x86_64:
+  sinecure:
     docker:
-      - image: cossacklabs/android-build:2019.01
-    environment:
-      # NIST STS tests tend to fail in Docker environment
-      NO_NIST_STS: 1
-      WITH_FATAL_WARNINGS: yes
-      SOTER_KDF_RUN_LONG_TESTS: yes
+      - image: scratch
     steps:
-      - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev ruby-dev lcov libc6-dbg
-      - run: sudo ln -sf /usr/bin/gcov-5 /usr/bin/gcov
-      - run: sudo gem install coveralls-lcov
-      - run: go get github.com/mattn/goveralls
-      - checkout
-      - run: git reset HEAD && git submodule sync && git submodule update --init
-      - run: make BUILD_PATH=cover_build COVERAGE=y prepare_tests_basic
-      - run: lcov --directory . --zerocounters
-      # run only if CIRCLE_PR_NUMBER variable is not set (it's not pull request and COVERALLS_TOKEN will be set via circleCI for non-PR build) and COVERALLS_TOKEN is set
-      # we should calculate coverage for gothemis and send report before sending coverage of main C part
-      - run: '[ -z "$CIRCLE_PR_NUMBER" ] && ! [ -z "$COVERALLS_TOKEN" ] && cd $HOME/go/src/$GOTHEMIS_IMPORT && $HOME/go/bin/goveralls -v -service=circle-ci -repotoken=$COVERALLS_TOKEN || true'
-      - run: cover_build/tests/soter_test
-      - run: cover_build/tests/themis_test
-      - run: lcov --directory . --capture --output-file coverage.info
-      - run: lcov --remove coverage.info 'tests/*' 'src/soter/openssl/*' '/usr/*' --output-file coverage.info
-      - run: lcov --list coverage.info
-      - run: coveralls-lcov -v --repo-token $COVERALLS_TOKEN coverage.info || true
 
 workflows:
   version: 2
-  tests:
-    jobs:
-      - x86_64
-  nightly:
-    # Apparently CircleCI does not have a "push" or "pull request" trigger
-    # so we have to have a separate workflow with the same job list.
-    triggers:
-      - schedule:
-          cron: "0 5 * * *"
-          filters:
-            branches:
-              only:
-                - master
-                - stable
-    jobs:
-      - x86_64
