Unbreak Criterion's HTML reports
Our benchmarking harness has decided that it's time for some INNOVATION
and for starters released a version which has disabled generation of
HTML reports by default, changed their location from current directory
to the proper shared target directory, and strongly suggests migrating
away from running benchmarks with "cargo bench" in favor of their own
"cargo criterion".

Well, okay, that's a fine rabbit to chase later, but for now let's at
least unbreak our build by adapting to the new reality.

--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -195,7 +195,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: Criterion report
-          path: benches/themis/target/criterion
+          path: target/criterion
 
   fuzzing:
     name: AFL fuzzing
