--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -9,7 +9,7 @@ themis = { version = "0.13", path = "../../src/wrappers/themis/rust" }
 libthemis-sys = { version = "0.13", path = "../../src/wrappers/themis/rust/libthemis-sys" }
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = { version = "0.3.4", features = ["cargo_bench_support", "html_reports"]}
 
 [[bench]]
 name = "secure_cell_seal_master_key"
