--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,10 +133,10 @@ jobs:
       - run:
           name: Pack benchmark report
           command: |
-            cd benches/themis/target
+            cd target
             zip -r ../report.zip criterion
       - store_artifacts:
-          path: benches/themis/report.zip
+          path: report.zip
       - save_cache:
           key: rust
           paths:
