Migrate to "afl++" from "afl"
The original "afl" [1] has been abandoned and is not maintained since
2017. "afl++" [2] is its replacement. Since it's a fork, it has mostly
compatible command line, and more features.

[1]: http://lcamtuf.coredump.cx/afl/
[2]: https://github.com/AFLplusplus/AFLplusplus

The original afl is currently being phased out from distributions.
In particular, it's gone from whatever repo list GitHub Actions use,
breaking our build. Migrate to "afl++" instead.

Not all operating systems ship with "afl++" though. For example, it's
still not available in binary form on macOS via Homebrew. Therefore,
don't jump the gun and don't update the Makefile to use "afl++"-only
features. (However, it would be nice to use them if available.)

--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -212,7 +212,7 @@ jobs:
           sudo dpkg --add-architecture i386
           sudo apt update
           sudo apt install --yes gcc make zip \
-              afl gcc-multilib libc6-dev:i386 \
+              afl++ gcc-multilib libc6-dev:i386 \
               libssl-dev:amd64 libssl-dev:i386
           # AFL needs proper core dumps to be available, write them to files
           sudo sh -c 'echo core > /proc/sys/kernel/core_pattern'
