--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -199,7 +199,14 @@ jobs:
 
   fuzzing:
     name: AFL fuzzing
-    runs-on: ubuntu-latest
+    # TODO(ilammy, 2021-01-28): use "ubuntu-latest" once it works
+    # Currently "ubuntu-latest" means "ubuntu-18.04" but for some inexplicable
+    # reasons GitHub runners in the main repo treat it as "ubuntu-20.04" which
+    # does not seem to work yet (for this job). Pin the Ubuntu 18.04 version
+    # for now, but don't forget to update this once "ubuntu-latest" changes
+    # its meaning or starts working for this job.
+    # See: https://docs.github.com/en/actions/reference/specifications-for-github-hosted-runners
+    runs-on: ubuntu-18.04
     env:
       FUZZ_TIMEOUT: 30s
       THEMIS_DEFAULT_PBKDF2_ITERATIONS: 10
