Add more pom.xml metadata
Currently we're defining the bare minimum: artifact name and version.
However, Maven Central repository wants more information about the
artifacts.

This is a bit different from what we include on Bintray, but it's
consistent with pom.xml manually published on Maven Central,
and *that* is consistent with other language wrappers.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -145,6 +145,30 @@ publishing {
             groupId 'com.cossacklabs.com'
             artifactId 'themis'
             version androidThemisVersion
+            pom {
+                name = 'Themis for Android'
+                description = 'Cross-platform high-level cryptographic library for mobile, web, and server platforms'
+                url = 'https://www.cossacklabs.com/themis/'
+                licenses {
+                    license {
+                        name = 'Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        name = 'Cossack Labs'
+                        email = 'dev@cossacklabs.com'
+                        organization = 'Cossack Labs'
+                        organizationUrl = 'https://www.cossacklabs.com'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/cossacklabs/themis.git'
+                    developerConnection = 'scm:git:ssh://github.com:cossacklabs/themis.git'
+                    url = 'https://github.com/cossacklabs/themis'
+                }
+            }
         }
     }
 }
