Add Sonatype staging repository
Define the repository we will be publishing to: Sonatype staging
repository. First artifacts go there, then they are transferred to
the OSS repository from which they are mirrored to the Central repo.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -171,6 +171,17 @@ publishing {
             }
         }
     }
+    repositories {
+        maven {
+            url = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
+            credentials {
+                // Use API tokens instead of actual username and password
+                // https://oss.sonatype.org/#profile;User%20Token
+                username System.getenv('OSSRH_USERNAME')
+                password System.getenv('OSSRH_PASSWORD')
+            }
+        }
+    }
 }
 
 bintray {
