Sign artifacts before publishing
Here's this Gradle plugin which everyone uses. Configure it to sign the
published artifacts with GPG. I don't want to put keys into some weird
Java thingie so let the system's GPG manage them.

The "signing" plugin has pretty limited configurability. Most of it
should be set in "gradle.properties" file in your home directory.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -135,6 +135,7 @@ task generateJavadocJar(type: Jar) {
 
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
+apply plugin: 'signing'
 
 publishing {
     publications {
@@ -182,6 +183,22 @@ publishing {
             }
         }
     }
+}
+
+// Credentials for signing should be set in "~/.gradle/gradle.properties" file.
+// (The global one in your home directory, NOT the one in the project root.)
+//
+//     signing.gnupg.executable=gpg
+//     signing.gnupg.keyName=...
+//     signing.gnupg.passphrase=...
+//
+// Yes, only in that file. Because Gradle says so.
+//
+// https://docs.gradle.org/current/userguide/signing_plugin.html#example_configure_the_gnupgsignatory
+signing {
+    required { gradle.taskGraph.hasTask("publish") }
+    useGpgCmd()
+    sign publishing.publications.Production
 }
 
 bintray {
