Update publishing task exception list
We use a vile hack to add BoringSSL as a dependency for AndroidThemis
and this hack needs all publishing-related tasks to be enumerated for
them to not automatically apply to BoringSSL which we don't want to
publish.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -73,11 +73,15 @@ android {
     // publishing and bitray upload tasks should not run for ':boringssl' project
     tasks.whenTaskAdded { task ->
         def excludeBoringSSL = [
+            'publish',
+            'publishToMavenLocal',
+            'publishProductionPublicationToMavenRepository',
             'publishProductionPublicationToMavenLocal',
             'generatePomFileForProductionPublication',
             'generateSourceJar',
             'generateJavadoc',
             'generateJavadocJar',
+            'signProductionPublication',
         ]
         if (!excludeBoringSSL.contains(task.name)) {
             task.dependsOn(':boringssl:' + task.name)
