Update comments about "org.gradle.configureondemand"
Turns out that it was Bintray plugin that was broken with this option.
Publishing to standard Maven repos is fine.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,7 @@
 # We'd like to enable "configuration on demand" [1] to allow building Themis
-# for Desktop Java without having Android SDK installed, but for some reason
-# it breaks Bintray publishing with a weird error [2].
-#
-# This option is enabled to keep regular builds working, but you will need
-# to set it to "false" to run "./gradlew :android:bintrayUpload".
+# for Desktop Java without having Android SDK installed.
 #
 # [1]: https://docs.gradle.org/current/userguide/multi_project_builds.html#sec:configuration_on_demand
-# [2]: https://stackoverflow.com/questions/42552511/cannot-change-dependencies-of-configuration-compile-after-it-has-been-resolve
 org.gradle.configureondemand=true
 
 # Versions of AndroidThemis and JavaThemis packages.
