Remove TextEncoder polyfill (#779)
TextEncoder is supported in the all browsers for a long time and also in node.js. For some node.js versions it is only available through the util package.

We do not need to support browsers like IE11 because they do not support webassembly

--- a/src/wrappers/themis/wasm/package.json
+++ b/src/wrappers/themis/wasm/package.json
@@ -22,9 +22,7 @@
     "url": "https://github.com/cossacklabs/themis/issues"
   },
   "homepage": "https://www.cossacklabs.com/themis/",
-  "dependencies": {
-    "fastestsmallesttextencoderdecoder": "^1.0.14"
-  },
+  "dependencies": {},
   "devDependencies": {
     "mocha": "^7.1.1"
   }
