--- a/src/wrappers/themis/java/build.gradle
+++ b/src/wrappers/themis/java/build.gradle
@@ -56,3 +56,36 @@ compileTestJava {
     options.deprecation = true // log deprecated API usage
     options.encoding = "ASCII" // allow only ASCII in source code
 }
+
+// Publishing on Maven Central requires packages with Java source code and Javadocs.
+// Note that "archiveClassifier" values are important for Maven Central.
+
+task generateSourceJar(type: Jar) {
+    description = 'Assembles a JAR with Java source code'
+    archiveClassifier = 'sources'
+    from sourceSets.main.java.srcDirs
+    // "You cannot place a Planck generator container within another Planck generator,
+    // as it will cause a graviton harmonics chain reaction whose end cannot be determined."
+    // No, seriously, sometimes Gradle eats much more glue than it usually does.
+    // When packing the current directory -- sourceSets.main.java.srcDirs --
+    // into a JAR, it will just go ahead and pack the "build" directory too,
+    // along the very JAR it's currently constructing. RIP disk space.
+    excludes = ['build']
+}
+
+task generateJavadoc(type: Javadoc) {
+    description = 'Generates Javadocs from the source code'
+    source = sourceSets.main.java.srcDirs
+    title = 'Themis API Reference'
+    // Javadoc chokes on non-Java files so exclude non-sources from the source dir.
+    excludes = ['build', 'build.gradle']
+    // Make runtime dependencies available to Javadoc (important for annotations)
+    classpath = project.sourceSets.main.runtimeClasspath
+}
+
+task generateJavadocJar(type: Jar) {
+    description = 'Assembles a JAR with Javadocs'
+    archiveClassifier = 'javadoc'
+    from generateJavadoc.destinationDir
+    dependsOn 'generateJavadoc'
+}
