Maven publishing for desktop JavaThemis (#788)
* Maven publishing for desktop JavaThemis

Let's put JavaThemis for desktop systems into Maven Central as well.

Note that this includes only the Java part of the library -- a JAR with
JVM bytecode. JavaThemis also needs a JNI library, which you will have
to install separately, as appropriate for your system. See docs:

https://docs.cossacklabs.com/themis/languages/java/installation-desktop/

Maven Central requires Javadocs and source code to be available so make
them available. The tasks to build them are almost the same as for
Android, but not quite the same. Building source JAR is the most funny
one as it has uncovered an issue in Gradle which was not visible when
building Android JARs (as that happens in a different directory).

Also note that we are publishing under the same "weird" groupId:
"com.cossacklabs.com", because that's what we have used in the past, and
that's our groupId prefix on Maven Central.

Since the artifactId "themis" is already taken by JavaThemis for Android,
desktop systems will use "java-themis". Hopefully, this will not be too
confusing for the users.

* Set up publishing to Sonatype staging repos

Configure the repositories and signing keys. Those should the be same
as used for publishing Android binaries and they should be set up in
the same way.

* Include desktop systems into the changelog

Add this PR to the changelog, make the wording more inclusive, and
provide some copypastable examples of "build.gradle" configurations.

Publishing JavaThemis for desktop in *any* Maven repository is a new
thing. Android publishings were long available via JCenter and Bintray,
but JavaThemis for desktop has never been published anywhere. Until this
moment, that is.

* Remove unnecessary plugins for Bintray publishing

We don't publish to Bintray anymore, hence those Gradle plugins are
no longer necessary. Drop them while we are here.

--- a/src/wrappers/themis/java/build.gradle
+++ b/src/wrappers/themis/java/build.gradle
@@ -56,3 +56,105 @@ compileTestJava {
     options.deprecation = true // log deprecated API usage
     options.encoding = "ASCII" // allow only ASCII in source code
 }
+
+// Publishing on Maven Central requires packages with Java source code and Javadocs.
+// Note that "archiveClassifier" values are important for Maven Central.
+
+task generateSourceJar(type: Jar) {
+    description = 'Assembles a JAR with Java source code'
+    archiveClassifier = 'sources'
+    from sourceSets.main.java.srcDirs
+    // "You cannot place a Planck generator container within another Planck generator,
+    // as it will cause a graviton harmonics chain reaction whose end cannot be determined."
+    // No, seriously, sometimes Gradle eats much more glue than it usually does.
+    // When packing the current directory -- sourceSets.main.java.srcDirs --
+    // into a JAR, it will just go ahead and pack the "build" directory too,
+    // along the very JAR it's currently constructing. RIP disk space.
+    excludes = ['build']
+}
+
+task generateJavadoc(type: Javadoc) {
+    description = 'Generates Javadocs from the source code'
+    source = sourceSets.main.java.srcDirs
+    title = 'Themis API Reference'
+    // Javadoc chokes on non-Java files so exclude non-sources from the source dir.
+    excludes = ['build', 'build.gradle']
+    // Make runtime dependencies available to Javadoc (important for annotations)
+    classpath = project.sourceSets.main.runtimeClasspath
+}
+
+task generateJavadocJar(type: Jar) {
+    description = 'Assembles a JAR with Javadocs'
+    archiveClassifier = 'javadoc'
+    from generateJavadoc.destinationDir
+    dependsOn 'generateJavadoc'
+}
+
+// Maven Central distribution
+
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
+
+publishing {
+    publications {
+        Production(MavenPublication) {
+            from components.java
+            artifact generateSourceJar
+            artifact generateJavadocJar
+            groupId 'com.cossacklabs.com'
+            artifactId 'java-themis'
+            version javaThemisVersion
+            pom {
+                name = 'JavaThemis'
+                description = 'Cross-platform high-level cryptographic library for mobile, web, and server platforms'
+                url = 'https://www.cossacklabs.com/themis/'
+                licenses {
+                    license {
+                        name = 'Apache License, Version 2.0'
+                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        name = 'Cossack Labs'
+                        email = 'dev@cossacklabs.com'
+                        organization = 'Cossack Labs'
+                        organizationUrl = 'https://www.cossacklabs.com'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/cossacklabs/themis.git'
+                    developerConnection = 'scm:git:ssh://github.com:cossacklabs/themis.git'
+                    url = 'https://github.com/cossacklabs/themis'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            url = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
+            credentials {
+                // Use API tokens instead of actual username and password
+                // https://oss.sonatype.org/#profile;User%20Token
+                username System.getenv('OSSRH_USERNAME')
+                password System.getenv('OSSRH_PASSWORD')
+            }
+        }
+    }
+}
+
+// Credentials for signing should be set in "~/.gradle/gradle.properties" file.
+// (The global one in your home directory, NOT the one in the project root.)
+//
+//     signing.gnupg.executable=gpg
+//     signing.gnupg.keyName=...
+//     signing.gnupg.passphrase=...
+//
+// Yes, only in that file. Because Gradle says so.
+//
+// https://docs.gradle.org/current/userguide/signing_plugin.html#example_configure_the_gnupgsignatory
+signing {
+    required { gradle.taskGraph.hasTask("publish") }
+    useGpgCmd()
+    sign publishing.publications.Production
+}
