--- a/src/wrappers/themis/wasm/tsconfig.json
+++ b/src/wrappers/themis/wasm/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "target": "ES2015",
+    "declaration": true,
+    "target": "es5",
+    "lib": [ "es2015", "dom" ],
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "dist/"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
