Add benchmark for wrapped cell in token protect

--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -46,3 +46,7 @@ harness = false
 [[bench]]
 name = "secure_cell_wrapped_seal_master_key"
 harness = false
+
+[[bench]]
+name = "secure_cell_wrapped_token_protect_master_key"
+harness = false
