More Themis benchmarks (#821)
* Add benchmark for Token Protect - Master Key

* Add benchmark for Context Imprint - Master Key

* Add benchmark for Secure Message, enc/dec - ECDSA

* Add benchmark for Secure Message, enc/dec - RSA

* Add benchmark for Secure Message, sig/ver - ECDSA

* Add benchmark for Secure Message, sig/ver - RSA

* Update README

Put '✅ complete' in the benchmark table.

* Add benchmark for wrapped cell in seal mode

Wrapped cell means 'Rust wrapper of Secure Cell'

* Add benchmark for wrapped cell in token protect

* Add bench for wrapped cell in context imprint mode

* Add bench for wrapped cell in seal with passphrase

* Change naming of Rust benches

`secure_cell_wrapped -> rust_secure_cell`
`Wrapped Secure Cell -> RustThemis - Secure Cell`

* Add Secure Message benches into CI

* Fix CI to run only core benchmarks of Secure Cell

Before, CI used the next regexp to filter the benches:
"Secure Cell .* passphrase/4 KB". But it matches "Secure Cell..."
as well as "RustThemis - Secure Cell...".

Replace regexp with an explicit "^Secure Cell...".

* Fix CI to run only core benches of Secure Message

The same as a prevoius one, plus fix some quotation marks formatting
issues.

* Move RustThemis benches into separate crate

* Remove prefix `rust_` in the RustThemis benchmark filenames

* Update benches/README.md

Add entry about rust wrapper benches

* Update benches/rust/README.md

Add the goal of the RustThemis benchmarks.

Co-authored-by: vixentael <vixentael@users.noreply.github.com>

* Refactor with cargo-clippy

Remove some redundant copies

Co-authored-by: vixentael <vixentael@users.noreply.github.com>
Co-authored-by: Alexei Lozovsky <me@ilammy.net>

--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -185,12 +185,20 @@ jobs:
       - name: Benchmark Secure Cell (master key)
         run: |
           cd benches/themis
-          cargo bench -- 'Secure Cell .* master key/4 KB'
+          cargo bench -- '^Secure Cell .* master key/4 KB'
       - name: Benchmark Secure Cell (passphrase)
         run: |
           cd benches/themis
           # These are awfully slow due to KDF
-          cargo bench -- 'Secure Cell .* passphrase/4 KB' --sample-size 10
+          cargo bench -- '^Secure Cell .* passphrase/4 KB' --sample-size 10
+      - name: Benchmark Secure Message (RSA)
+        run: |
+          cd benches/themis
+          cargo bench -- '^Secure Message .* - RSA/4 KB'
+      - name: Benchmark Secure Message (ECDSA)
+        run: |
+          cd benches/themis
+          cargo bench -- '^Secure Message .* - ECDSA/4 KB'
       - name: Upload benchmark report
         uses: actions/upload-artifact@v1
         with:
