--- a/.github/workflows/test-objc.yaml
+++ b/.github/workflows/test-objc.yaml
@@ -79,11 +79,6 @@ jobs:
           find tests/objcthemis -type f -name Podfile -print0 | xargs -0 \
             sed -E -i '' \
                 -e "s|(pod 'themis.*').*|\1, :git => \"https://github.com/${HACK_REPOSITORY}.git\", :commit => \"$HACK_SHA\"|"
-      - name: CocoaPods cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.cocoapods
-          key: ${{ runner.os }}-cocoapods-common
       - name: Update CocoaPods repo
         run: |
           pod repo update
@@ -250,11 +245,6 @@ jobs:
           find docs/examples -type f -name Podfile -print0 | xargs -0 \
             sed -E -i '' \
                 -e "s|(pod 'themis(/[a-z-]*)*').*|\1, :git => \"https://github.com/${HACK_REPOSITORY}.git\", :commit => \"$HACK_SHA\"|"
-      - name: CocoaPods cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.cocoapods
-          key: ${{ runner.os }}-cocoapods-common
       - name: Update CocoaPods repo
         run: |
           pod repo update
@@ -291,26 +281,12 @@ jobs:
       #
       # App samples: Objective-C
       #
-      - name: Build sample app (Objective-C, Carthage, iOS) - excluding arm64
+      - name: Build sample app (Objective-C, Carthage, iOS)
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/objc/iOS-Carthage
-
-          # ------ beginning of workaround
+          carthage bootstrap --platform iOS --use-xcframeworks
           # This workaround lives here until we update example projects
-          # from https://github.com/Carthage/Carthage/issues/3019#issuecomment-699143260
-          # supports Xcode 12.0.1
-          set -euo pipefail
-          xcconfig=$(mktemp /tmp/static.xcconfig.XXXXXX)
-          trap 'rm -f "$xcconfig"' INT TERM HUP EXIT
-          # For Xcode 12 make sure EXCLUDED_ARCHS is set to arm architectures otherwise
-          # the build will fail on lipo due to duplicate architectures.
-          echo 'EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_simulator__NATIVE_ARCH_64_BIT_x86_64__XCODE_1200 = arm64 arm64e armv7 armv7s armv6 armv8' >> $xcconfig
-          echo 'EXCLUDED_ARCHS = $(inherited) $(EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_$(EFFECTIVE_PLATFORM_SUFFIX)__NATIVE_ARCH_64_BIT_$(NATIVE_ARCH_64_BIT)__XCODE_$(XCODE_VERSION_MAJOR))' >> $xcconfig
-          export XCODE_XCCONFIG_FILE="$xcconfig"          
-          # ------ end of workaround
-
-          carthage bootstrap --platform iOS
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData \
@@ -323,7 +299,7 @@ jobs:
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/objc/macOS-Carthage
-          carthage bootstrap --platform macOS
+          carthage bootstrap --platform macOS --use-xcframeworks
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData \
@@ -346,26 +322,12 @@ jobs:
       #
       # App samples: Swift
       #
-      - name: Build sample app (Swift, Carthage, iOS) - excluding arm64
+      - name: Build sample app (Swift, Carthage, iOS)
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/swift/iOS-Carthage
-
-          # ------ beginning of workaround
+          carthage bootstrap --platform iOS --use-xcframeworks
           # This workaround lives here until we update example projects
-          # from https://github.com/Carthage/Carthage/issues/3019#issuecomment-699143260
-          # supports Xcode 12.0.1
-          set -euo pipefail
-          xcconfig=$(mktemp /tmp/static.xcconfig.XXXXXX)
-          trap 'rm -f "$xcconfig"' INT TERM HUP EXIT
-          # For Xcode 12 make sure EXCLUDED_ARCHS is set to arm architectures otherwise
-          # the build will fail on lipo due to duplicate architectures.
-          echo 'EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_simulator__NATIVE_ARCH_64_BIT_x86_64__XCODE_1200 = arm64 arm64e armv7 armv7s armv6 armv8' >> $xcconfig
-          echo 'EXCLUDED_ARCHS = $(inherited) $(EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_$(EFFECTIVE_PLATFORM_SUFFIX)__NATIVE_ARCH_64_BIT_$(NATIVE_ARCH_64_BIT)__XCODE_$(XCODE_VERSION_MAJOR))' >> $xcconfig
-          export XCODE_XCCONFIG_FILE="$xcconfig"          
-          # ------ end of workaround
-
-          carthage bootstrap --platform iOS
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData \
@@ -378,7 +340,7 @@ jobs:
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/swift/macOS-Carthage
-          carthage bootstrap --platform macOS
+          carthage bootstrap --platform macOS --use-xcframeworks
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData \
