Run integration tests for reference implementation on CI
Now also run tests in "tests/reference". These ones require GoThemis
(which is vendored) and it requires Themis Core to be installed.

Make sure to install Themis Core only after running unit tests. This
ensures that reference implementation itself does not require Themis.

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -126,9 +126,20 @@ jobs:
     name: Reference implementation
     runs-on: ubuntu-latest
     steps:
+      - name: Install system dependencies
+        run: |
+          sudo sh -c 'echo "DEBIAN_FRONTEND=noninteractive" >> /etc/environment'
+          sudo apt update
+          sudo apt install --yes gcc make libssl-dev
       - name: Check out code
         uses: actions/checkout@v2
       # Unit tests for reference implementation do not require neither GoThemis
       # nor Themis Core to be installed. Do not install them before this step.
       - name: Run unit test suite
         run: cd reference && go test -v ./...
+      - name: Install Themis Core
+        run: |
+          make
+          sudo make install
+      - name: Run integration test suite
+        run: cd tests/reference && go test -v ./...
