Trigger CI runs on code changes in reference implementation

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -7,9 +7,11 @@ on:
       - 'docs/examples/go/**'
       - 'docs/examples/Themis-server/go/**'
       - 'gothemis/**'
+      - 'reference/**'
       - 'src/soter/**'
       - 'src/themis/**'
       - 'tests/common/**'
+      - 'tests/reference/**'
       - 'tests/test.mk'
       - '**/*.mk'
       - 'Makefile'
