Move reference implementation into the monorepo (#844)
* Reference implementation of Themis

After a while I have realized that putting reference implementation into
the same repository as documentation is probably not the greatest idea.
Let's move it into the warm embrace of the monorepo, where we can run
tests on it and evolve the code together with the "real" GoThemis.

Start by setting a new top-level directory so that Go imports look nice:

    github.com/cossacklabs/themis/reference/...

That's where reference implementation will live.

* Import existing reference code

Pull the code from github.com/cossacklabs/product-docs and put it here.
The package is now named "soter" instead of "common".

* Fix linter warnings

No idea why but "go vet" has been complaining about these constants not
having the same type. Okay, I don't mind, let's be explicit now.

* Run unit tests for reference implementation on CI

Add a new job to GoThemis rotation where we keep all our Go code here,
running unit tests for reference implementation. Note that it does not
require neither GoThemis nor Themis Core to be installed and I intend
to keep it that way.

* Integration tests for reference implementation

I'd also want to test that reference implementation is consistent with
whatever real GoThemis is doing. Using a nice hack with Go module
vendoring, set up a separate module that pulls in both GoThemis and
the reference implementation. Now we can write tests here that use
both of them, without making reference implementation depend on GoThemis
directly.

* Test Soter containers

The easiest way to get our hands onto a Soter container is to generate
an asymmetric key. This is probably the most important place where they
are used.

* Test Soter algorithm IDs

Now, the other easiest way to get ahold of a Soter algorithm ID is
to peek into a Secure Cell.

We'll get back to exploring Secure Cell contents once its reference
implementation

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -6,10 +6,12 @@ on:
       - '.github/workflows/test-go.yaml'
       - 'docs/examples/go/**'
       - 'docs/examples/Themis-server/go/**'
+      - 'docs/reference-implementation/**'
       - 'gothemis/**'
       - 'src/soter/**'
       - 'src/themis/**'
       - 'tests/common/**'
+      - 'tests/reference-implementation/**'
       - 'tests/test.mk'
       - '**/*.mk'
       - 'Makefile'
@@ -124,3 +126,25 @@ jobs:
           # that the example code is buildable.
           go build smessage_server.go
           go build ssession_server.go
+
+  reference-implementation:
+    name: Reference implementation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install system dependencies
+        run: |
+          sudo sh -c 'echo "DEBIAN_FRONTEND=noninteractive" >> /etc/environment'
+          sudo apt update
+          sudo apt install --yes gcc make libssl-dev
+      - name: Check out code
+        uses: actions/checkout@v2
+      # Unit tests for reference implementation do not require neither GoThemis
+      # nor Themis Core to be installed. Do not install them before this step.
+      - name: Run unit test suite
+        run: cd docs/reference-implementation && go test -v ./...
+      - name: Install Themis Core
+        run: |
+          make
+          sudo make install
+      - name: Run integration test suite
+        run: cd tests/reference-implementation && go test -v ./...
